--- a/Server/HelloServiceHost/App.config
+++ b/Server/HelloServiceHost/App.config
@@ -7,18 +7,34 @@
   <system.serviceModel>
 
     <services>
+
       <service name="MyFirstService.HelloService" behaviorConfiguration="mexBehaviour" >
         <endpoint address="HelloService" binding="basicHttpBinding" contract="MyFirstService.IHelloService"></endpoint>
         <endpoint address="HelloService" binding="netTcpBinding" contract="MyFirstService.IHelloService"></endpoint>
         <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange"></endpoint>
         <host>
           <baseAddresses>
-            <add baseAddress="http://localhost:8080/"/> <!-- тут допишется HelloService-->
-            <add baseAddress="net.tcp://localhost:8090/"/> <!-- тут допишется HelloService-->
+            <add baseAddress="http://localhost:8080/"/>
+            <!-- тут допишется HelloService-->
+            <add baseAddress="net.tcp://localhost:8090/"/>
+            <!-- тут допишется HelloService-->
+          </baseAddresses>
+        </host>
+      </service>
+
+      <service name ="CompanyService.CompanyService" behaviorConfiguration="mexBehaviour">
+        <endpoint address="CompanyService" binding ="basicHttpBinding" contract="CompanyService.ICompanyPublicService"></endpoint>
+        <endpoint address="CompanyService"  binding="netTcpBinding" contract="CompanyService.ICompanyConfidentialService"></endpoint>
+        <host>
+          <baseAddresses>
+             
+            <add baseAddress="http://localhost:8081/"/>
+           <add baseAddress="net.tcp://localhost:8091/"/>
           </baseAddresses>
         </host>
       </service>
     </services>
+    
     <behaviors>
       <serviceBehaviors>
         <behavior name="mexBehaviour">
@@ -26,6 +42,7 @@
         </behavior>
       </serviceBehaviors>
     </behaviors>
+  
   </system.serviceModel>
 
 </configuration>
