Added two simple services, realized and used them.

--- a/Clients/MyWpfClient/App.config
+++ b/Clients/MyWpfClient/App.config
@@ -7,9 +7,12 @@
         <bindings>
             <basicHttpBinding>
                 <binding name="BasicHttpBinding_IHelloService" />
+                <binding name="BasicHttpBinding_ICompanyPublicService" />
+                <binding name="BasicHttpBinding_IPersonalService" />
             </basicHttpBinding>
             <netTcpBinding>
                 <binding name="NetTcpBinding_IHelloService" />
+                <binding name="NetTcpBinding_ICompanyConfidentialService" />
             </netTcpBinding>
         </bindings>
         <client>
@@ -23,6 +26,19 @@
                     <userPrincipalName value="ANDREWPC\Zver" />
                 </identity>
             </endpoint>
+            <endpoint address="http://localhost:8081/CompanyService" binding="basicHttpBinding"
+                bindingConfiguration="BasicHttpBinding_ICompanyPublicService"
+                contract="CompanyService.ICompanyPublicService" name="BasicHttpBinding_ICompanyPublicService" />
+            <endpoint address="net.tcp://localhost:8091/CompanyService" binding="netTcpBinding"
+                bindingConfiguration="NetTcpBinding_ICompanyConfidentialService"
+                contract="CompanyService.ICompanyConfidentialService" name="NetTcpBinding_ICompanyConfidentialService">
+                <identity>
+                    <userPrincipalName value="ANDREWPC\Zver" />
+                </identity>
+            </endpoint>
+            <endpoint address="http://localhost:8082/PersonalAddress" binding="basicHttpBinding"
+                bindingConfiguration="BasicHttpBinding_IPersonalService" contract="myPersonalService.IPersonalService"
+                name="BasicHttpBinding_IPersonalService" />
         </client>
     </system.serviceModel>
 </configuration>
