--- a/Clients/WebApplication1/Web.config
+++ b/Clients/WebApplication1/Web.config
@@ -33,9 +33,11 @@
     <bindings>
       <basicHttpBinding>
         <binding name="BasicHttpBinding_IHelloService" />
+        <binding name="BasicHttpBinding_ICompanyPublicService" />
       </basicHttpBinding>
       <netTcpBinding>
         <binding name="NetTcpBinding_IHelloService" />
+        <binding name="NetTcpBinding_ICompanyConfidentialService" />
       </netTcpBinding>
     </bindings>
     <client>
@@ -45,6 +47,16 @@
       <endpoint address="net.tcp://localhost:8090/HelloService" binding="netTcpBinding"
         bindingConfiguration="NetTcpBinding_IHelloService" contract="HelloService2.IHelloService"
         name="NetTcpBinding_IHelloService">
+        <identity>
+          <userPrincipalName value="ANDREWPC\Zver" />
+        </identity>
+      </endpoint>
+      <endpoint address="http://localhost:8081/CompanyService" binding="basicHttpBinding"
+        bindingConfiguration="BasicHttpBinding_ICompanyPublicService"
+        contract="CompanyService.ICompanyPublicService" name="BasicHttpBinding_ICompanyPublicService" />
+      <endpoint address="net.tcp://localhost:8091/CompanyService" binding="netTcpBinding"
+        bindingConfiguration="NetTcpBinding_ICompanyConfidentialService"
+        contract="CompanyService.ICompanyConfidentialService" name="NetTcpBinding_ICompanyConfidentialService">
         <identity>
           <userPrincipalName value="ANDREWPC\Zver" />
         </identity>
