--- a/Server/HelloServiceHost/App.config
+++ b/Server/HelloServiceHost/App.config
@@ -27,13 +27,22 @@
         <endpoint address="CompanyService"  binding="netTcpBinding" contract="CompanyService.ICompanyConfidentialService"></endpoint>
         <host>
           <baseAddresses>
-             
             <add baseAddress="http://localhost:8081/"/>
            <add baseAddress="net.tcp://localhost:8091/"/>
           </baseAddresses>
         </host>
       </service>
+    
+    <service name="CompanyService.PersonalService" behaviorConfiguration="mexBehaviour">
+      <endpoint address="PersonalAddress" binding="basicHttpBinding" contract="CompanyService.IPersonalService"></endpoint> 
+    <host>
+      <baseAddresses>
+        <add baseAddress="http://localhost:8082/"/>
+      </baseAddresses>
+    </host>
+    </service>
     </services>
+    
     
     <behaviors>
       <serviceBehaviors>
