Added client of EmployeeService. Implemented webForm part for getting info from DB.

--- a/Clients/MyWpfClient/App.config
+++ b/Clients/MyWpfClient/App.config
@@ -9,6 +9,7 @@
                 <binding name="BasicHttpBinding_IHelloService" />
                 <binding name="BasicHttpBinding_ICompanyPublicService" />
                 <binding name="BasicHttpBinding_IPersonalService" />
+                <binding name="BasicHttpBinding_IEmployeeService" />
             </basicHttpBinding>
             <netTcpBinding>
                 <binding name="NetTcpBinding_IHelloService" />
@@ -36,9 +37,14 @@
                     <userPrincipalName value="ANDREWPC\Zver" />
                 </identity>
             </endpoint>
+          
             <endpoint address="http://localhost:8082/PersonalAddress" binding="basicHttpBinding"
                 bindingConfiguration="BasicHttpBinding_IPersonalService" contract="myPersonalService.IPersonalService"
                 name="BasicHttpBinding_IPersonalService" />
+          
+            <endpoint address="http://localhost:8083/EmployeeService" binding="basicHttpBinding"
+                bindingConfiguration="BasicHttpBinding_IEmployeeService" contract="EmployeeService.IEmployeeService"
+                name="BasicHttpBinding_IEmployeeService" />
         </client>
     </system.serviceModel>
 </configuration>
