--- a/Server/EmployeeServiceHost/App.config
+++ b/Server/EmployeeServiceHost/App.config
@@ -1,26 +1,23 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0"?>
 <configuration>
-  <startup>
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.1" />
-  </startup>
-  
   <connectionStrings>
-    <add name="DBCS" connectionString="data source=.;Integrated Security=SSPI;Database=MyDB" providerName="System.Data.SqlClient"/>
+    <add name="DBCS"
+        connectionString="data source=.\SQLEXPRESS;initial catalog=MyDB;integrated security=True;"
+         providerName="System.Data.SqlClient" />
   </connectionStrings>
   
   <system.serviceModel>
-    
     <services>
       <service name="EmployeeService.EmployeeService" behaviorConfiguration="mexBehaviour">
-        <endpoint address="EmployeeService" binding ="basicHttpBinding" contract="EmployeeService.IEmployeeService"/>
+        <endpoint address="EmployeeService" binding="basicHttpBinding" contract="EmployeeService.IEmployeeService">
+        </endpoint>
         <host>
           <baseAddresses>
-            <add baseAddress="http://localhost:8083"/>
+            <add baseAddress="http://localhost:8083/"/>
           </baseAddresses>
         </host>
       </service>
     </services>
-    
     <behaviors>
       <serviceBehaviors>
         <behavior name="mexBehaviour">
