--- a/Clients/WebApplication1/Web.config
+++ b/Clients/WebApplication1/Web.config
@@ -34,6 +34,7 @@
       <basicHttpBinding>
         <binding name="BasicHttpBinding_IHelloService" />
         <binding name="BasicHttpBinding_ICompanyPublicService" />
+        <binding name="BasicHttpBinding_IEmployeeService" />
       </basicHttpBinding>
       <netTcpBinding>
         <binding name="NetTcpBinding_IHelloService" />
@@ -61,6 +62,9 @@
           <userPrincipalName value="ANDREWPC\Zver" />
         </identity>
       </endpoint>
+      <endpoint address="http://localhost:8083/EmployeeService" binding="basicHttpBinding"
+        bindingConfiguration="BasicHttpBinding_IEmployeeService" contract="ServiceReferenceEmployeeService.IEmployeeService"
+        name="BasicHttpBinding_IEmployeeService" />
     </client>
   </system.serviceModel>
 </configuration>
