--- a/Clients/WebApplication1/Web.config
+++ b/Clients/WebApplication1/Web.config
@@ -63,7 +63,7 @@
         </identity>
       </endpoint>
       <endpoint address="http://localhost:8083/EmployeeService" binding="basicHttpBinding"
-        bindingConfiguration="BasicHttpBinding_IEmployeeService" contract="ServiceReferenceEmployeeService.IEmployeeService"
+        bindingConfiguration="BasicHttpBinding_IEmployeeService" contract="EmployeeService.IEmployeeService"
         name="BasicHttpBinding_IEmployeeService" />
     </client>
   </system.serviceModel>
